# InsideOperations

./: .env.example  .gitignore  .mcp.json  BUG_REPORT_LOG_NEW_CRASH.md  CLAUDE.md  CONSOLE_OUTPUT.md  Cargo.toml  DEBUG_INDEX.md  DEBUG_LOG_ROUTE.md  EULA.md  README.md  SCENARIO_9_UAT_SUMMARY.txt  TERMS_OF_USE.md  TOAST_IMPLEMENTATION_SUMMARY.md  WORKSPACE_CREATION_TOAST_TEST_REPORT.md  WORKSPACE_TOAST_TECHNICAL_FINDINGS.md  deny.toml  dev.sh  docker-compose.yml  install.sh  install_project.sh  install_system.sh  io-gh-mirror.sh  io-orchestrator-init.sh  io-orchestrator.config.json  io-run.sh  io-watchdog.sh  package-lock.json  uninstall.sh
.playwright-mcp/: active-alarms.iographic  chart_canvas.txt  chart_left_zoom.txt  log-Log-Entries-2026-03-25-2107.csv  page-2026-04-01T05-34-55-327Z.yml  page-2026-04-01T16-03-01-083Z.yml  page-2026-04-01T16-03-04-032Z.yml  page-2026-04-01T16-03-15-198Z.yml  page-2026-04-01T18-50-37-839Z.yml  page-2026-04-01T18-50-58-238Z.yml  page-2026-04-01T18-51-10-015Z.yml  page-2026-04-01T18-51-21-058Z.yml  page-2026-04-01T18-51-48-298Z.yml  page-2026-04-01T18-54-29-289Z.yml  page-2026-04-01T18-54-40-816Z.yml  page-2026-04-01T18-55-01-292Z.yml  page-2026-04-02T03-02-42-859Z.yml  (+148 more)
comms/: schema.sql  (+12 more)
crates/io-health/: Cargo.toml
crates/io-health/src/: lib.rs
crates/io-observability/: Cargo.toml
crates/io-observability/src/: lib.rs
crates/io-scan/: Cargo.toml
crates/io-scan/src/: lib.rs
services/alert-service/: Cargo.toml
services/alert-service/src/: config.rs  main.rs  state.rs
services/alert-service/src/channels/: browser_push.rs  mod.rs  pa.rs  radio.rs  sms.rs  voice.rs
services/alert-service/src/handlers/: alerts.rs  channel_config.rs  escalation.rs  health.rs  mod.rs  policies.rs  rosters.rs  templates.rs  webhooks.rs
services/alert-service/tests/: alerts.rs
services/api-gateway/: Cargo.toml  build.rs  shapes-snapshot.json
services/api-gateway/src/: broker.rs  config.rs  correlation.rs  file_scan.rs  main.rs  metrics_collector.rs  mw.rs  proxy.rs  report_generator.rs  seed_shapes.rs  shape_hash.rs  state.rs  tiles.rs  tls.rs
services/api-gateway/src/badge/: generic.rs  mod.rs  poller.rs
services/api-gateway/src/handlers/: backup.rs  bookmarks.rs  bulk_update.rs  certificates.rs  console.rs  dashboards.rs  dcs_import.rs  exports.rs  expressions.rs  forensics.rs  graphics.rs  iographic.rs  logs.rs  mobile.rs  mod.rs  notifications.rs  opc_certs.rs  points.rs  reports.rs  rounds.rs  saved_charts.rs  search.rs  shifts.rs  system.rs  user_preferences.rs  video_exports.rs  video_streams.rs
services/api-gateway/tests/: security.rs
services/auth-service/: Cargo.toml
services/auth-service/src/: audit.rs  config.rs  expression_eval.rs  main.rs  oidc_jwks.rs  sms.rs  state.rs
services/auth-service/src/handlers/: alarms.rs  api_keys.rs  auth.rs  auth_providers.rs  duo.rs  email_mfa.rs  eula.rs  expressions.rs  groups.rs  ldap_auth.rs  mfa.rs  mod.rs  oidc.rs  pin.rs  reports.rs  roles.rs  saml.rs  scim.rs  sessions.rs  settings.rs  sms_mfa.rs  users.rs  ws_ticket.rs
services/auth-service/tests/: auth_flows.rs
services/data-broker/: Cargo.toml
services/data-broker/src/: broadcast.rs  cache.rs  config.rs  expression_eval.rs  expression_registry.rs  fanout.rs  main.rs  notify.rs  publish.rs  registry.rs  staleness.rs  state.rs  throttle.rs  uds.rs  ws.rs
services/data-broker/tests/: ws_subscription.rs
services/email-service/: Cargo.toml
services/email-service/src/: config.rs  crypto.rs  main.rs  queue_worker.rs  seed_templates.rs  state.rs  template_engine.rs
services/email-service/src/handlers/: email.rs
services/email-service/templates/: _base.html  alert_escalation.html  alert_notification.html  export_complete.html  password_reset.html  report_ready.html  round_assigned.html  round_overdue.html  test_email.html  user_welcome.html
services/email-service/tests/: email_send.rs
services/event-service/: Cargo.toml
services/event-service/src/: alarm_evaluator.rs  alarm_state.rs  config.rs  lib.rs  main.rs  state.rs
services/event-service/src/handlers/: alarms.rs
services/event-service/tests/: alarm_state.rs
services/import-service/: Cargo.toml
services/import-service/src/: config.rs  crypto.rs  main.rs  pipeline.rs  state.rs
services/import-service/src/connectors/: aspen_ip21_rest.rs  canary_rest.rs  db_writes.rs  experion_rest.rs  foxboro_rest.rs  kepware_rest.rs  mod.rs  pi_web_api.rs  s800xa_rest.rs  siemens_sph_rest.rs  wincc_oa_rest.rs  yokogawa_centum_rest.rs
services/import-service/src/connectors/etl/: file_csv.rs  file_excel.rs  file_json.rs  file_polling.rs  file_xml.rs  ftp.rs  local_file.rs  mod.rs  mongodb.rs  odbc.rs  rest.rs  s3.rs  sftp.rs  shiftboard.rs  sql_mssql.rs  sql_mysql.rs  sql_postgres.rs  ukg_wfm.rs
services/import-service/src/connectors/streaming/: mod.rs  mongo_cdc.rs  mysql_cdc.rs  pg_cdc.rs  sse.rs  supervisor.rs  websocket.rs
services/import-service/src/handlers/: import.rs  mod.rs  stream.rs  webhook.rs
services/import-service/tests/: import_pipeline.rs
services/opc-service/: Cargo.toml
services/opc-service/src/: config.rs  db.rs  driver.rs  ipc.rs  main.rs  state.rs
services/opc-service/tests/: opc_driver.rs
services/parser-service/: Cargo.toml
services/parser-service/src/: config.rs  main.rs
services/parser-service/src/handlers/: dcs_ge.rs  dcs_import.rs  dcs_rockwell.rs  dcs_siemens.rs  mod.rs  parse.rs
services/parser-service/tests/: parsing.rs
services/recognition-service/: Cargo.toml
services/recognition-service/src/: config.rs  main.rs  model_manager.rs  state.rs
services/recognition-service/tests/: recognition.rs
services/video-export-service/: Cargo.toml  Dockerfile
services/video-export-service/capture-worker/: index.mjs  package-lock.json  package.json
services/video-export-service/capture-worker/test/: smoke.mjs
services/video-export-service/src/: config.rs  db.rs  handlers.rs  jobs.rs  lib.rs  main.rs  state.rs
services/video-export-service/src/render/: playwright.rs
services/video-export-service/tests/: integration.rs
(+3728 files in other folders)
