[package]
name = "io-health"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
once_cell.workspace = true
async-trait.workspace = true
sqlx.workspace = true
