[package]
name = "alert-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alert-service"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
sqlx.workspace = true
io-error = { path = "../../crates/io-error" }
io-health = { path = "../../crates/io-health" }
io-observability = { path = "../../crates/io-observability" }
io-models = { path = "../../crates/io-models" }
io-auth = { path = "../../crates/io-auth" }
io-db = { path = "../../crates/io-db" }
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
dashmap.workspace = true
tokio-util.workspace = true
minijinja.workspace = true
async-trait.workspace = true
web-push-native = { version = "0.4", features = ["default"] }
thiserror.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true
sha1.workspace = true
hmac.workspace = true
urlencoding.workspace = true
metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
