[package]
name = "email-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "email-service"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
io-error = { path = "../../crates/io-error" }
io-health = { path = "../../crates/io-health" }
io-observability = { path = "../../crates/io-observability" }
io-models = { path = "../../crates/io-models" }
io-db = { path = "../../crates/io-db" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
lettre.workspace = true
minijinja.workspace = true
base64.workspace = true
