[package]
name = "event-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "event-service"
path = "src/main.rs"

[lib]
name = "event_service_lib"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
io-error = { path = "../../crates/io-error" }
io-health = { path = "../../crates/io-health" }
io-observability = { path = "../../crates/io-observability" }
io-models = { path = "../../crates/io-models" }
io-db = { path = "../../crates/io-db" }
io-bus = { path = "../../crates/io-bus" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
metrics.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
