[package]
name = "import-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "import-service"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-trait.workspace = true
io-db = { path = "../../crates/io-db" }
io-error = { path = "../../crates/io-error" }
io-health = { path = "../../crates/io-health" }
io-observability = { path = "../../crates/io-observability" }
io-models = { path = "../../crates/io-models" }
aes-gcm.workspace = true
base64.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
wiremock.workspace = true
