[package]
name = "import-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "import-service"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-trait.workspace = true
io-db = { path = "../../crates/io-db" }
io-error = { path = "../../crates/io-error" }
io-health = { path = "../../crates/io-health" }
io-observability = { path = "../../crates/io-observability" }
io-models = { path = "../../crates/io-models" }
aes-gcm.workspace = true
base64.workspace = true
hex.workspace = true
cron = "0.12"
metrics.workspace = true
calamine = "0.26"
csv = "1.3"
quick-xml = { version = "0.36", features = ["serialize"] }
mysql_async = "0.34"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio-util = { version = "0.7", features = ["compat"] }
odbc-api = "8"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.1"
mongodb = { version = "3.1" }
bson = "2"
glob = "0.3"
suppaftp = { version = "6", default-features = false, features = ["async-rustls"] }
futures = "0.3"
reqwest-eventsource = "0.6"
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
pgwire-replication = "0.3"
mysql_cdc = "0.2"
aws-sdk-s3 = "1"
aws-config = "1"
hmac = "0.12"
sha1.workspace = true
sha2 = "0.10"
constant_time_eq = "0.3"

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
wiremock.workspace = true
