[package]
name = "parser-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parser-service"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
zip.workspace = true
io-error = { path = "../../crates/io-error" }
io-health = { path = "../../crates/io-health" }
io-observability = { path = "../../crates/io-observability" }
io-models = { path = "../../crates/io-models" }
metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true }
roxmltree = { workspace = true }
reqwest = { workspace = true }
