[package]
name = "recognition-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recognition-service"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
io-error = { path = "../../crates/io-error" }
io-health = { path = "../../crates/io-health" }
io-observability = { path = "../../crates/io-observability" }
io-models = { path = "../../crates/io-models" }
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
zip.workspace = true
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
digest = "0.10"
metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
